# TriggerToDo

./: .env.example  .gitignore  README.md  initialize.sh  pyproject.toml
.github/workflows/: tests.yml
app/: __init__.py  config.py  db.py  graph.py  jira.py  main.py  models.py  routes_auth.py  routes_epic.py  routes_event.py  routes_jira.py  routes_sync.py  routes_todo.py  routes_trigger.py  schemas.py  security.py  sync.py  trigger_engine.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  router.ts  style.css
frontend/src/components/: TaskEditDialog.vue  TaskForm.vue
frontend/src/lib/: api.ts  auth.ts  boardCutoff.ts  taskForm.ts  triggerCatalog.ts  triggerSignal.ts  types.ts
frontend/src/pages/: BoardPage.vue  EpicPage.vue  EventManagementPage.vue  LoginPage.vue  SettingsPage.vue  TaskDetailPage.vue  TodayPage.vue  TriggerManagementPage.vue
scripts/: export_initialize_json.py  import_initialize_json.py  migrate_remove_user_oid.py
tests/: conftest.py  test_config_security.py  test_graph_helpers.py  test_routes_and_trigger_engine.py  test_sync_service.py
